--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -98,6 +98,8 @@ windows = { version = "0.61.3", features = [
   "Win32_System_Variant",
   "Win32_Foundation",
   "Win32_UI_WindowsAndMessaging",
+  "Win32_System_DataExchange",
+  "Win32_System_Memory",
 ] }
 screenshots = "0.8"
 
