--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -103,6 +103,7 @@ windows = { version = "0.61.3", features = [
   "Win32_UI_Input_KeyboardAndMouse",
   "Win32_System_DataExchange",
   "Win32_System_Memory",
+  "Win32_Graphics_Gdi",
 ] }
 screenshots = "0.8"
 
