Feat: ability to show vram for the process and the global system
(cherry picked from commit 8de82505d98094baf1bbd6897dbe7f46325032e8)

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -104,6 +104,9 @@ windows = { version = "0.61.3", features = [
   "Win32_System_DataExchange",
   "Win32_System_Memory",
   "Win32_Graphics_Gdi",
+  "Win32_Graphics_Dxgi",
+  "Win32_Graphics_Dxgi_Common",
+  "Wdk_Graphics_Direct3D",
 ] }
 screenshots = "0.8"
 
