chore: daily cumulative update (2026-02-19)
Refactoring & Features:
- Profile UI Refresh: Consolidate layout for default and profile cards, dynamic status badges for prompt overrides and LLM sections, inline editing for profile names.
- Settings Sync: Route model_unload_timeout through settingsStore updater, improve reset button logic, align timeout values with backend enum.
- Application Flow: Gate demo preview by global toggle, optionally restore pasted back text on error, keep push-to-talk active until actual pointer release.
- Sidebar Navigation: Reorder Speech Processing and Transcribe File tabs.

Bug Fixes:
- AI-Replace: Harden cancel/apply windows, fix close cancel race, improve stop-flow cleanup, fix whitespace-only find patterns, resolve provider summaries and var logic.
- UI Layout: Fix instantly resizing text areas (CSS), prevent toggle overlaps at medium widths, allow maximizing main window, fix visibility of status badges.
- Persistence: Fix fuzzy word settings persistence & allow empty LLM prompt configurations.
- Safety & Debug: Gate realtime safety buffer behind fuzzy correction, enforce history limit max of 1000, avoid panic on startup port bindings, surface autostart registration failures.

Documentation:
- Update README with beta release info.
- Clarify Quick Tap two-stage design and Soniox realtime chunk behavior.
- Add Push-to-Talk hint to UI and clarify Custom Words location.
- General updates to Agents.md and code documentation.

--- a/src-tauri/resources/default_settings.json
+++ b/src-tauri/resources/default_settings.json
@@ -19,5 +19,6 @@
   "ai_replace_system_prompt": "You are a text transformation engine.\nReturn ONLY the final transformed text that is ready to be pasted directly into another application.\nDo not include explanations, commentary, labels, headings, lists, markdown, code fences, or any surrounding quotes.\nPreserve the original language and keep the original formatting (line breaks, punctuation, and spacing) unless the instruction explicitly asks to change it.\nMake the smallest change that satisfies the instruction.\nIf the instruction conflicts with the text or is unclear, prefer minimal edits and do not invent new facts.",
   "ai_replace_user_prompt": "INSTRUCTION:\n${instruction}\n\nTEXT:\n${output}",
   "ai_replace_max_chars": 20000,
+  "ai_replace_restore_on_error": true,
   "connector_password": "fklejqwhfiu342lhk3"
 }
