Bring Microsoft Store to main.

--- a/.github/workflows/microsoft-store-release.yml
+++ b/.github/workflows/microsoft-store-release.yml
@@ -56,7 +56,7 @@ jobs:
       platform: ${{ matrix.platform }}
       target: ${{ matrix.target }}
       build-args: ${{ matrix.args }}
-      sign-binaries: true
+      sign-binaries: false
       asset-prefix: "aivorelay-store"
       upload-artifacts: false
       release-id: ${{ needs.create-release.outputs.release-id }}
